# append_to_string

./: Cargo.toml  README.md
src/: lib.rs
tests/: literals.rs  nested_structs.rs
